FutureBot to talk with in python using the microphone -Project -WORK --COMMIT

--- a/PythonProjects/AskBot-PandasAI/test.ipynb
+++ b/PythonProjects/AskBot-PandasAI/test.ipynb
@@ -30,11 +30,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# IMPORTS\n",
     "import os\n",
     "import pandas as pd\n",
     "import pandasai\n",
@@ -42,16 +41,32 @@
     "from pandasai.llm.openai import OpenAI\n",
     "from dotenv import dotenv_values\n",
     "# Keys\n",
-    "keys = dotenv_values(\"../../.env\")\n",
-    "os.environ[\"PANDASAI_API_KEY\"] = keys[\"PANDASAI_API_KEY\"]"
+    "keys = dotenv_values(\"../../.env\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### "
+    "#### Initialization\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "os.environ[\"PANDASAI_API_KEY\"] = keys[\"PANDASAI_API_KEY\"]\n",
+    "llm = OpenAI(api_token=keys[\"OPENAI_API_KEY\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
