--- a/PythonProjects/AskBot-PandasAI/test.ipynb
+++ b/PythonProjects/AskBot-PandasAI/test.ipynb
@@ -41,7 +41,7 @@
     "from pandasai.llm.openai import OpenAI\n",
     "from dotenv import dotenv_values\n",
     "# Keys\n",
-    "keys = dotenv_values(\"../../.env\")"
+    "keys = dotenv_values(\"../../.env-token\")"
    ]
   },
   {
