--- a/PythonTests/PandasAI-Tests/tweets-test.ipynb
+++ b/PythonTests/PandasAI-Tests/tweets-test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,13 +12,13 @@
     "import pandas as pd\n",
     "from dotenv import dotenv_values\n",
     "# Keys\n",
-    "keys = dotenv_values(\"../../.env\")\n",
+    "keys = dotenv_values(\"../../.env-token\")\n",
     "os.environ[\"PANDASAI_API_KEY\"] = keys[\"PANDASAI_API_KEY\"]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -27,20 +27,20 @@
        "(3561, 13)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# I'm gonna make a test asking a few things about the DataFrame of tweets i have in Assets/Datasets/CSV/Tweets folder\n",
-    "df = pd.read_csv(\"../../Assets/Datasets/CSV/Tweets/Train/sem_eval_train_es.csv\")\n",
+    "df = pd.read_csv(\"Tweets/Train/sem_eval_train_es.csv\")\n",
     "df.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +187,7 @@
        "4     False  False  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -336,7 +336,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
