--- a/PythonTests/Transformers/TabTransformer-WineQuality.ipynb
+++ b/PythonTests/Transformers/TabTransformer-WineQuality.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,18 +27,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Load the Dataset\n",
-    "dir_dataset = \"../../Assets/Datasets/CSV/WineQuality/winequality-red.csv\"\n",
+    "dir_dataset = \"WineQuality/winequality-red.csv\"\n",
     "data = pd.read_csv(dir_dataset, sep=';')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -248,23 +248,49 @@
        "</div>"
       ],
       "text/plain": [
-       "      fixed acidity  volatile acidity  citric acid  ...  sulphates  alcohol  quality\n",
-       "0               7.4             0.700         0.00  ...       0.56      9.4        5\n",
-       "1               7.8             0.880         0.00  ...       0.68      9.8        5\n",
-       "2               7.8             0.760         0.04  ...       0.65      9.8        5\n",
-       "3              11.2             0.280         0.56  ...       0.58      9.8        6\n",
-       "4               7.4             0.700         0.00  ...       0.56      9.4        5\n",
-       "...             ...               ...          ...  ...        ...      ...      ...\n",
-       "1594            6.2             0.600         0.08  ...       0.58     10.5        5\n",
-       "1595            5.9             0.550         0.10  ...       0.76     11.2        6\n",
-       "1596            6.3             0.510         0.13  ...       0.75     11.0        6\n",
-       "1597            5.9             0.645         0.12  ...       0.71     10.2        5\n",
-       "1598            6.0             0.310         0.47  ...       0.66     11.0        6\n",
+       "      fixed acidity  volatile acidity  citric acid  residual sugar  chlorides  \\\n",
+       "0               7.4             0.700         0.00             1.9      0.076   \n",
+       "1               7.8             0.880         0.00             2.6      0.098   \n",
+       "2               7.8             0.760         0.04             2.3      0.092   \n",
+       "3              11.2             0.280         0.56             1.9      0.075   \n",
+       "4               7.4             0.700         0.00             1.9      0.076   \n",
+       "...             ...               ...          ...             ...        ...   \n",
+       "1594            6.2             0.600         0.08             2.0      0.090   \n",
+       "1595            5.9             0.550         0.10             2.2      0.062   \n",
+       "1596            6.3             0.510         0.13             2.3      0.076   \n",
+       "1597            5.9             0.645         0.12             2.0      0.075   \n",
+       "1598            6.0             0.310         0.47             3.6      0.067   \n",
+       "\n",
+       "      free sulfur dioxide  total sulfur dioxide  density    pH  sulphates  \\\n",
+       "0                    11.0                  34.0  0.99780  3.51       0.56   \n",
+       "1                    25.0                  67.0  0.99680  3.20       0.68   \n",
+       "2                    15.0                  54.0  0.99700  3.26       0.65   \n",
+       "3                    17.0                  60.0  0.99800  3.16       0.58   \n",
+       "4                    11.0                  34.0  0.99780  3.51       0.56   \n",
+       "...                   ...                   ...      ...   ...        ...   \n",
+       "1594                 32.0                  44.0  0.99490  3.45       0.58   \n",
+       "1595                 39.0                  51.0  0.99512  3.52       0.76   \n",
+       "1596                 29.0                  40.0  0.99574  3.42       0.75   \n",
+       "1597                 32.0                  44.0  0.99547  3.57       0.71   \n",
+       "1598                 18.0                  42.0  0.99549  3.39       0.66   \n",
+       "\n",
+       "      alcohol  quality  \n",
+       "0         9.4        5  \n",
+       "1         9.8        5  \n",
+       "2         9.8        5  \n",
+       "3         9.8        6  \n",
+       "4         9.4        5  \n",
+       "...       ...      ...  \n",
+       "1594     10.5        5  \n",
+       "1595     11.2        6  \n",
+       "1596     11.0        6  \n",
+       "1597     10.2        5  \n",
+       "1598     11.0        6  \n",
        "\n",
        "[1599 rows x 12 columns]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -275,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -285,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -300,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -325,23 +351,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 0, Loss: 1.9031\n",
-      "Epoch: 10, Loss: 1.0137\n",
-      "Epoch: 20, Loss: 0.9788\n",
-      "Epoch: 30, Loss: 0.9385\n",
-      "Epoch: 40, Loss: 0.9129\n",
-      "Epoch: 50, Loss: 0.8916\n",
-      "Epoch: 60, Loss: 0.8536\n",
-      "Epoch: 70, Loss: 0.8289\n",
-      "Epoch: 80, Loss: 0.7714\n",
-      "Epoch: 90, Loss: 0.7021\n"
+      "Epoch: 0, Loss: 2.0367\n",
+      "Epoch: 10, Loss: 1.0141\n",
+      "Epoch: 20, Loss: 0.9610\n",
+      "Epoch: 30, Loss: 0.9352\n",
+      "Epoch: 40, Loss: 0.9058\n",
+      "Epoch: 50, Loss: 0.8742\n",
+      "Epoch: 60, Loss: 0.8515\n",
+      "Epoch: 70, Loss: 0.8213\n",
+      "Epoch: 80, Loss: 0.7623\n",
+      "Epoch: 90, Loss: 0.7405\n"
      ]
     }
    ],
@@ -369,14 +395,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test Accuracy: 0.612500011920929\n"
+      "Test Accuracy: 0.6416666507720947\n"
      ]
     }
    ],
@@ -410,7 +436,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
