--- a/PythonProjects/AskBot-PandasAI/test.ipynb
+++ b/PythonProjects/AskBot-PandasAI/test.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,16 +62,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
     "FORMAT = pyaudio.paInt16\n",
     "CHANNELS = 1\n",
     "RATE = 16000\n",
-    "CHUNK = 1024\n",
+    "CHUNK = 320\n",
     "THRESHOLD = 500\n",
-    "SILENCE_TIMEOUT = 4"
+    "SILENCE_TIMEOUT = 1"
    ]
   },
   {
@@ -83,15 +83,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Environment key\n",
     "os.environ[\"PANDASAI_API_KEY\"] = keys[\"PANDASAI_API_KEY\"]\n",
-    "llm = OpenAI(api_token=keys[\"OPENAI_API_KEY\"])\n",
-    "# Pyaudio\n",
-    "audio = pyaudio.PyAudio()"
+    "llm = OpenAI(api_token=keys[\"OPENAI_API_KEY\"])"
    ]
   },
   {
@@ -103,12 +101,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 49,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You can talk now.\n",
+      "Recording...\n",
+      "\n",
+      "Finished recording.\n"
+     ]
+    }
+   ],
    "source": [
     "# This will record audio till we stay 4 seconds without talk\n",
-    "\n",
+    "audio = pyaudio.PyAudio()\n",
     "stream = audio.open(\n",
     "    format=FORMAT,\n",
     "    channels=CHANNELS,\n",
@@ -123,16 +132,19 @@
     "vad = webrtcvad.Vad()\n",
     "vad.set_mode(3) # <-- Aggressive detection to record voice\n",
     "\n",
-    "while True:\n",
-    "    data = stream.read(CHUNK)\n",
-    "    frames.append(data)\n",
-    "    is_speech = vad.is_speech(data, RATE)\n",
-    "    if not is_speech:\n",
-    "        silence_counter += 1\n",
-    "    else:\n",
-    "        silence_counter = 0\n",
-    "    if silence_counter >= int( SILENCE_TIMEOUT * ( RATE / CHUNK )):\n",
-    "        break\n",
+    "try:\n",
+    "    while True:\n",
+    "        data = stream.read(CHUNK)\n",
+    "        frames.append(data)\n",
+    "        is_speech = vad.is_speech(data, RATE)\n",
+    "        if not is_speech:\n",
+    "            silence_counter += 1\n",
+    "        else:\n",
+    "            silence_counter = 0\n",
+    "        if silence_counter >= int( SILENCE_TIMEOUT * ( RATE / CHUNK )):\n",
+    "            break\n",
+    "except Exception as e:\n",
+    "    print(f\"Exception catched: {e}\")\n",
     "\n",
     "print(\"\\nFinished recording.\")\n",
     "\n",
@@ -176,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,11 +201,11 @@
     "    engine.runAndWait()\n",
     "    \n",
     "def Speech2Text(audioFile):\n",
-    "    with sr.AudioFile(audio) as audioFile:\n",
-    "        audio = r.record(audioFile)\n",
+    "    with sr.AudioFile(audioFile) as audio:\n",
+    "        audioFile = r.record(audio)\n",
     "        print(\"Audio loaded\")\n",
     "        try:\n",
-    "            text = r.recognize_google(audio)\n",
+    "            text = r.recognize_google(audioFile)\n",
     "            print(text)\n",
     "            return text\n",
     "        except Exception as e:\n",
@@ -206,54 +218,66 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Main "
+    "#### Transform Speech from previus audio into text"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
-     "ename": "UnboundLocalError",
-     "evalue": "local variable 'audio' referenced before assignment",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mUnboundLocalError\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[12], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# speech2text try\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m text \u001b[38;5;241m=\u001b[39m \u001b[43mSpeech2Text\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mAudios/recorded_audio.wav\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28mprint\u001b[39m(text)\n",
-      "Cell \u001b[0;32mIn[11], line 9\u001b[0m, in \u001b[0;36mSpeech2Text\u001b[0;34m(audioFile)\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mSpeech2Text\u001b[39m(audioFile):\n\u001b[0;32m----> 9\u001b[0m     \u001b[38;5;28;01mwith\u001b[39;00m sr\u001b[38;5;241m.\u001b[39mAudioFile(\u001b[43maudio\u001b[49m) \u001b[38;5;28;01mas\u001b[39;00m audioFile:\n\u001b[1;32m     10\u001b[0m         audio \u001b[38;5;241m=\u001b[39m r\u001b[38;5;241m.\u001b[39mrecord(audioFile)\n\u001b[1;32m     11\u001b[0m         \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mAudio loaded\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-      "\u001b[0;31mUnboundLocalError\u001b[0m: local variable 'audio' referenced before assignment"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Audio loaded\n",
+      "hello hello it's me Alex it's taken of me and can you talk to me about these signal processing please\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "str"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "# speech2text try\n",
     "text = Speech2Text(\"Audios/recorded_audio.wav\")\n",
-    "print(text)"
+    "type(text)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Ask to a LLE about the audio"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'text' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[13], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# text2speech try\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m Text2Speech(\u001b[43mtext\u001b[49m)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'text' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "# text2speech try\n",
-    "Text2Speech(text)"
+    "#### Receive the answer and make the lib say it"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
