ya funciona la comunicación con pandasai -WORK --CONTROL-COMMIT

--- a/PythonProjects/AskBot-PandasAI/test.ipynb
+++ b/PythonProjects/AskBot-PandasAI/test.ipynb
@@ -255,15 +255,36 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Ask to a LLE about the audio"
+    "#### Ask PandasAI"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "empty_df = [{}]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello Alex, sure I can talk to you about signal processing. Signal processing is a technique used to analyze, modify, and synthesize signals such as sound, images, and sensor data. It involves various operations like filtering, noise reduction, compression, and feature extraction. Is there anything specific you would like to know about signal processing?\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = SmartDataframe([{}])\n",
+    "answer = df.chat(text)\n",
+    "print(answer)\n"
+   ]
   },
   {
    "cell_type": "markdown",
