change from PandasAI to Transformer model for python AskBot App -WORK --CONTROL-COMMIT

--- a/PythonProjects/AskBot/askbot-transformer-v0.ipynb
+++ b/PythonProjects/AskBot/askbot-transformer-v0.ipynb
@@ -30,9 +30,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/alejandro/Documents/Repositorios/alejandromadrid/.python-venv/lib/python3.9/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n",
+      "2024-05-03 15:33:27.400149: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
+     ]
+    }
+   ],
    "source": [
     "# PyAudio\n",
     "import pyaudio \n",
@@ -176,7 +187,7 @@
    "outputs": [],
    "source": [
     "text = Speech2Text(\"Audios/recorded.wav\")\n",
-    "type(text) # <--- We check the type of our text"
+    "type(text) # <--- We check the type of our texts"
    ]
   },
   {
