code done but i have to rebuild tensorflow because i've got it badly installed -WORK --CONTROL-COMMIT

--- a/PythonTests/Transformers/Transformer-Edible-Mushroom/edible-mushroom.ipynb
+++ b/PythonTests/Transformers/Transformer-Edible-Mushroom/edible-mushroom.ipynb
@@ -16,17 +16,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2024-05-03 18:56:05.145613: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
+     ]
+    }
+   ],
    "source": [
     "# imports\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "from sklearn.preprocessing import LabelEncoder, OneHotEncoder\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from transformers import TFAutoModelForSequenceClassification, TFTrainingArguments\n",
-    "from transformers.trainer_tf import TFTrainer\n",
+    "from tab_transformer_pytorch import TabTransformer\n",
     "import tensorflow as tf"
    ]
   },
@@ -745,23 +753,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "((43228, 6855), (10807, 6855), (43228,), (10807,))"
+       "((43228, 6855), (5403, 6855), (5404, 6855), (43228,), (5403,), (5404,))"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 108,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "X_train, X_test, y_train, y_test = train_test_split(X, Y, train_size=.8, random_state=123)\n",
-    "X_train.shape, X_test.shape, y_train.shape, y_test.shape"
+    "X_train, X_temp, y_train, y_temp = train_test_split(X, Y, train_size=.8, random_state=123)\n",
+    "X_val, X_test, y_val, y_test = train_test_split(X_temp, y_temp, train_size=0.5)\n",
+    "X_train.shape, X_val.shape, X_test.shape, y_train.shape, y_val.shape, y_test.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trainDataset = tf.data.Dataset.from_tensor_slices((X_train.values, y_train.values))\n",
+    "trainDataset = trainDataset.shuffle(buffer_size=len(X_train)).batch(32)\n",
+    "#\n",
+    "valDataset = tf.data.Dataset.from_tensor_slices((X_val.values, y_val.values))\n",
+    "valDataset = valDataset.shuffle(buffer_size=len(X_val)).batch(32)\n",
+    "# \n",
+    "testDataset = tf.data.Dataset.from_tensor_slices((X_test.values, y_test.values))\n",
+    "testDataset = testDataset.shuffle(buffer_size=len(X_test)).batch(32)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "create the model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = TabTransformer(\n",
+    "    categories=[X_train[col].nunuique() for col in categorical_columns],\n",
+    "    num_continuous=(len(X_train.columns) - len(categorical_columns)),\n",
+    "    dim=32,\n",
+    "    depth=6,\n",
+    "    heads=8,\n",
+    "    attn_dropout=0.1,\n",
+    "    ff_dropout=0.1,\n",
+    "    mlp_hidden=64,\n",
+    "    mlp_activation=\"relu\",\n",
+    "    mlp_dropout=0.1,\n",
+    "    num_classes=2\n",
+    ")"
    ]
   }
  ],
