--- a/PythonProjects/MultipleSclerosis-Predictor/multiplesclerosis.ipynb
+++ b/PythonProjects/MultipleSclerosis-Predictor/multiplesclerosis.ipynb
@@ -479,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -641,14 +641,12 @@
      ]
     },
     {
-     "ename": "AttributeError",
-     "evalue": "'list' object has no attribute 'mean'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[30], line 16\u001b[0m\n\u001b[1;32m     14\u001b[0m     acc_score_list\u001b[38;5;241m.\u001b[39mappend( accuracy_score( y_pred, y_test) )\n\u001b[1;32m     15\u001b[0m     \u001b[38;5;66;03m#\u001b[39;00m\n\u001b[0;32m---> 16\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mWe got :\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;130;01m\\t\u001b[39;00m\u001b[38;5;124m · An avg AUC: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mroc_score_list\u001b[38;5;241m.\u001b[39mmean()\u001b[38;5;132;01m:\u001b[39;00m\u001b[38;5;124m.4f\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;130;01m\\t\u001b[39;00m\u001b[38;5;124m · An avg Accuracy: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00macc_score_list\u001b[38;5;241m.\u001b[39mmean()\u001b[38;5;132;01m:\u001b[39;00m\u001b[38;5;124m.4f\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'list' object has no attribute 'mean'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "We got :\n",
+      "\t · An avg AUC: 0.9554\n",
+      "\t · An avg Accuracy: 0.9551\n"
      ]
     }
    ],
@@ -668,15 +666,8 @@
     "\n",
     "    acc_score_list.append( accuracy_score( y_pred, y_test) )\n",
     "    #\n",
-    "print(f\"We got :\\n\\t · An avg AUC: {roc_score_list.mean():.4f}\\n\\t · An avg Accuracy: {acc_score_list.mean():.4f}\")"
+    "print(f\"We got :\\n\\t · An avg AUC: {np.mean(roc_score_list):.4f}\\n\\t · An avg Accuracy: {np.mean(acc_score_list):.4f}\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
